package com.example.project_rickandmorty_base.commons.utils

object TestTags {
    // List Character
    const val CHARACTER_ITEM_SELECTED = "CHARACTER_ITEM_SELECTED"
    const val TITLE_LIST_CHARACTER_BAR = "List of Characters"

    // Detail Character
    const val TITLE_CHARACTER_DETAIL_BAR = "Character Detail"
    const val BUTTON_CHARACTER_TOP_BAR_BACK = "BUTTON TOP BAR BACK"

    //Filter Character
    const val CHARACTER_ITEM_SELECTED_FILTER = "CHARACTER_ITEM_SELECTED_FILTER"

    //Bottom Sheet Character
    const val BTN_BOTTOM_SHEET_CHARACTER_FILTER = "Filtrar"
    const val BTN_BOTTOM_SHEET_CHARACTER_CLEAN = "Limpar"
    const val BS_NAME_TEXT_FIELD = "BS_NAME_TEXT_FIELD"
    const val BS_STATUS_TEXT_FIELD = "BS_STATUS_TEXT_FIELD"
    const val BS_SPECIES_TEXT_FIELD = "BS_SPECIES_TEXT_FIELD"
    const val BS_TYPE_TEXT_FIELD = "BS_TYPE_TEXT_FIELD"
    const val BS_GENDER_TEXT_FIELD = "BS_GENDER_TEXT_FIELD"

}